# sessionly

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  drizzle.config.ts  index.html  package-lock.json  package.json  sessionly-web  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: claude-code-hooks.md
drizzle/: 0000_glossy_odin.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
electron/main/: auto-updater.ts  database.ts  index.ts  ipc-handlers.ts  pet-window.ts  schema.ts  system-tray.ts  window-state-manager.ts
electron/preload/: index.ts
electron/shared/: hook-types.ts  pet-types.ts  session-types.ts  types.ts
promo-video/: package-lock.json  package.json  tsconfig.json
promo-video/src/: Promo.tsx  Root.tsx
scripts/: notarize.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  commands.rs  hooks.rs  lib.rs  main.rs  markdown_export.rs  session_monitor.rs  session_store.rs  session_types.rs
src/components/: Layout.tsx  MigrationBanner.tsx  PageRouter.tsx  Sidebar.tsx  UpdateNotification.tsx
src/config/: navigation.tsx
src/contexts/: NavigationContext.tsx  NotificationContext.tsx  SessionMonitorContext.tsx  ThemeContext.tsx
src/hooks/: useNotifications.ts  useSessionMonitor.ts
src/pages/: AboutPage.tsx  FeaturesPage.tsx  HomePage.tsx  SettingsPage.tsx  WeatherPage.tsx
(+94 files in other folders)
