[package]
name = "sessionly-tauri"
version = "2.0.0"
description = "Desktop app for browsing Claude Code CLI session history"
authors = ["VerySmallWoods"]
edition = "2021"

[lib]
name = "sessionly_tauri_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tiny_http = "0.12"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
